tests/errors/syn8.kt
fun outer() {
    fun inner() {
        println("Nested function")
    }
}
